chore: sync rubocop config across repositories

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,5 @@
 AllCops:
-  TargetRubyVersion: 3.2
+  TargetRubyVersion: 3.3
   NewCops: disable
   Include:
     - '**/*.lic'
@@ -24,6 +24,12 @@ Layout/HashAlignment:
   EnforcedHashRocketStyle: table
 
 Layout/LineLength:
+  Enabled: false
+
+Layout/HeredocIndentation:
+  Enabled: false
+
+Layout/ClosingHeredocIndentation:
   Enabled: false
 
 Metrics/AbcSize:
