--- a/.github/workflows/rubocop_syntax_checker.yaml
+++ b/.github/workflows/rubocop_syntax_checker.yaml
@@ -1,6 +1,9 @@
 name: Rubocop
 on:
   push:
+    branches:
+      - master
+      - staging
     paths:
       - 'scripts/**'
       - 'type_data/migrations/**'
