--- a/.github/workflows/ruby_syntax_checker.yml
+++ b/.github/workflows/ruby_syntax_checker.yml
@@ -1,6 +1,8 @@
 name: Valid Ruby Syntax
 on:
   push:
+    branches:
+      - master
     paths:
       - 'scripts/**'
       - 'type_data/migrations/**'
