update libxml2-utils to be cached install

--- a/.github/workflows/rspec_tests.yml
+++ b/.github/workflows/rspec_tests.yml
@@ -22,10 +22,11 @@ jobs:
         with:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true
-      - name: Update apt repo sources
-        run: sudo apt-get update -y
       - name: Install xmllint
-        run: sudo apt-get install libxml2-utils
+        uses: awalsh128/cache-apt-pkgs-action@v1
+        with:
+          packages: libxml2-utils
+          version: 1.0
       - name: Run type data migrations to create gameobj-data.xml
         run: bin/migrate
       - name: Run RSpec tests
