--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,10 +15,11 @@ jobs:
         with:
           ruby-version: '2.7'
           bundler-cache: true
-      - name: Update apt repo sources
-        run: sudo apt-get update -y
       - name: Install xmllint
-        run: sudo apt-get install libxml2-utils
+        uses: awalsh128/cache-apt-pkgs-action@v1
+        with:
+          packages: libxml2-utils
+          version: 1.0
       - name: Run type data migrations to create gameobj-data.xml
         run: bin/migrate
       - name: Release updates to Tillmen's Lich repository
