--- a/.github/workflows/ruby_syntax_checker.yml
+++ b/.github/workflows/ruby_syntax_checker.yml
@@ -25,7 +25,7 @@ jobs:
           
       - name: Get changed files
         id: changed-files
-        uses: tj-actions/changed-files@v45
+        uses: step-security/changed-files@3dbe17c78367e7d60f00d78ae6781a35be47b4a1
         with:
           files: |
             **/*.lic
