--- a/.github/workflows/rubocop_syntax_checker.yaml
+++ b/.github/workflows/rubocop_syntax_checker.yaml
@@ -48,10 +48,11 @@ jobs:
             # For push events, check if it's a new branch
             if [ "${{ github.event.before }}" == "0000000000000000000000000000000000000000" ]; then
               echo "New branch detected, comparing with default branch"
-              DEFAULT_BRANCH=$(git remote show origin | grep 'HEAD branch' | cut -d' ' -f5)
+              # Use git symbolic-ref which properly handles branch names with spaces
+              DEFAULT_BRANCH=$(git symbolic-ref refs/remotes/origin/HEAD | sed 's@^refs/remotes/origin/@@')
               echo "base=$DEFAULT_BRANCH" >> $GITHUB_OUTPUT
               echo "compare_ref=origin/$DEFAULT_BRANCH" >> $GITHUB_OUTPUT
-              git fetch origin $DEFAULT_BRANCH
+              git fetch origin "$DEFAULT_BRANCH"
             else
               echo "base=${{ github.event.before }}" >> $GITHUB_OUTPUT
               echo "compare_ref=${{ github.event.before }}" >> $GITHUB_OUTPUT
@@ -77,7 +78,7 @@ jobs:
         if: steps.changed_files.outputs.has_changes == 'true'
         run: |
           echo "Running rubocop -a on changed files..."
-          cat /tmp/changed_files.txt | xargs -0 -I {} bundle exec rubocop -a {} || {
+          cat /tmp/changed_files.txt | xargs -0 bundle exec rubocop -a || {
             echo "Warning: Rubocop autocorrect encountered issues but continuing..."
             exit 0
           }
@@ -114,7 +115,7 @@ jobs:
         if: steps.changed_files.outputs.has_changes == 'true'
         run: |
           echo "Running rubocop check on changed files..."
-          cat /tmp/changed_files.txt | xargs -0 -I {} bundle exec rubocop {}
+          cat /tmp/changed_files.txt | xargs -0 bundle exec rubocop
       
       - name: Summary
         if: always() && steps.changed_files.outputs.has_changes == 'false'
