Enhance push handling in Rubocop syntax checker workflow
Refactor GitHub Actions workflow to improve push handling for Rubocop autocorrections, including better error handling for protected branches.

--- a/.github/workflows/rubocop_syntax_checker.yaml
+++ b/.github/workflows/rubocop_syntax_checker.yaml
@@ -62,7 +62,7 @@ jobs:
       - name: Get changed files
         id: changed_files
         run: |
-          CHANGED_FILES=$(git diff --name-only --diff-filter=ACM -z ${{ steps.base_ref.outputs.compare_ref }} HEAD | grep -zE '\.(rb|rbw|lic)$' || true)
+          CHANGED_FILES=$(git diff --name-only --diff-filter=ACM -z "${{ steps.base_ref.outputs.compare_ref }}" HEAD | grep -zE '\.(rb|rbw|lic)$' || true)
           
           if [ -n "$CHANGED_FILES" ]; then
             echo "has_changes=true" >> $GITHUB_OUTPUT
@@ -92,18 +92,31 @@ jobs:
           if git diff --quiet; then
             echo "No changes made by rubocop autocorrect"
           else
-            # Check if we can push (not a protected branch issue)
             if git add -u && git commit -m "Auto-fix: Apply rubocop autocorrections [skip ci]"; then
-              if git push 2>&1 | tee /tmp/push_output.txt; then
+              # Explicitly specify the branch name for push
+              CURRENT_BRANCH="${{ github.event_name == 'pull_request' && github.head_ref || github.ref_name }}"
+              
+              # Attempt to push and capture the exit code
+              if git push origin "HEAD:$CURRENT_BRANCH" 2>&1 | tee /tmp/push_output.txt; then
                 echo "Successfully pushed autocorrect changes"
               else
-                if grep -q "protected branch" /tmp/push_output.txt || grep -q "permission" /tmp/push_output.txt; then
-                  echo "::warning::Cannot push to protected branch. Rubocop fixes were not committed."
-                  echo "Please apply rubocop fixes manually or adjust branch protection rules."
-                else
-                  echo "::error::Failed to push changes"
-                  exit 1
+                PUSH_EXIT_CODE=$?
+                
+                # Check if push failed due to protected branch or permissions (exit code 1)
+                # GitHub's push rejection for protected branches typically uses exit code 1
+                if [ $PUSH_EXIT_CODE -eq 1 ]; then
+                  # Additional check: look for common protected branch indicators in output
+                  if grep -qiE "(protected branch|permission|prohibited|rejected)" /tmp/push_output.txt; then
+                    echo "::warning::Cannot push to protected branch or insufficient permissions."
+                    echo "::warning::Rubocop fixes were not committed. Please apply rubocop fixes manually or adjust branch protection rules."
+                    exit 0
+                  fi
                 fi
+                
+                # For any other push failure, report as error
+                echo "::error::Failed to push changes (exit code: $PUSH_EXIT_CODE)"
+                cat /tmp/push_output.txt
+                exit 1
               fi
             else
               echo "::error::Failed to commit changes"
