Refactor Rubocop workflow to improve branch handling

--- a/.github/workflows/rubocop_syntax_checker.yaml
+++ b/.github/workflows/rubocop_syntax_checker.yaml
@@ -24,10 +24,19 @@ jobs:
 
     name: Run Rubocop on Ruby ${{ matrix.ruby }}
     steps:
+      - name: Determine branch
+        id: branch
+        run: |
+          if [ "${{ github.event_name }}" == "pull_request" ]; then
+            echo "name=${{ github.head_ref }}" >> $GITHUB_OUTPUT
+          else
+            echo "name=${{ github.ref_name }}" >> $GITHUB_OUTPUT
+          fi
+      
       - name: Checkout code
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
-          ref: ${{ github.event_name == 'pull_request' && github.head_ref || github.ref }}
+          ref: ${{ steps.branch.outputs.name }}
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
       
@@ -62,13 +71,14 @@ jobs:
       - name: Get changed files
         id: changed_files
         run: |
-          CHANGED_FILES=$(git diff --name-only --diff-filter=ACM -z "${{ steps.base_ref.outputs.compare_ref }}" HEAD | grep -zE '\.(rb|rbw|lic)$' || true)
+          # Write NUL-separated output directly to file to preserve delimiters
+          git diff --name-only --diff-filter=ACM -z "${{ steps.base_ref.outputs.compare_ref }}" HEAD | \
+            grep -zE '\.(rb|rbw|lic)$' > /tmp/changed_files.txt || true
           
-          if [ -n "$CHANGED_FILES" ]; then
+          if [ -s /tmp/changed_files.txt ]; then
             echo "has_changes=true" >> $GITHUB_OUTPUT
-            echo "$CHANGED_FILES" > /tmp/changed_files.txt
             echo "Changed files:"
-            cat /tmp/changed_files.txt | tr '\0' '\n'
+            tr '\0' '\n' < /tmp/changed_files.txt
           else
             echo "has_changes=false" >> $GITHUB_OUTPUT
             echo "No Ruby, .rbw, or .lic files changed"
@@ -78,7 +88,7 @@ jobs:
         if: steps.changed_files.outputs.has_changes == 'true'
         run: |
           echo "Running rubocop -a on changed files..."
-          cat /tmp/changed_files.txt | xargs -0 bundle exec rubocop -a || {
+          xargs -0 bundle exec rubocop -a < /tmp/changed_files.txt || {
             echo "Warning: Rubocop autocorrect encountered issues but continuing..."
             exit 0
           }
@@ -86,6 +96,8 @@ jobs:
       - name: Check for changes and commit
         if: steps.changed_files.outputs.has_changes == 'true'
         run: |
+          set -o pipefail
+          
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           
@@ -93,8 +105,8 @@ jobs:
             echo "No changes made by rubocop autocorrect"
           else
             if git add -u && git commit -m "Auto-fix: Apply rubocop autocorrections [skip ci]"; then
-              # Explicitly specify the branch name for push
-              CURRENT_BRANCH="${{ github.event_name == 'pull_request' && github.head_ref || github.ref_name }}"
+              # Use the branch name determined at the start of the workflow
+              CURRENT_BRANCH="${{ steps.branch.outputs.name }}"
               
               # Attempt to push and capture the exit code
               if git push origin "HEAD:$CURRENT_BRANCH" 2>&1 | tee /tmp/push_output.txt; then
@@ -128,7 +140,7 @@ jobs:
         if: steps.changed_files.outputs.has_changes == 'true'
         run: |
           echo "Running rubocop check on changed files..."
-          cat /tmp/changed_files.txt | xargs -0 bundle exec rubocop
+          xargs -0 bundle exec rubocop < /tmp/changed_files.txt
       
       - name: Summary
         if: always() && steps.changed_files.outputs.has_changes == 'false'
