Refactor Rubocop workflow for better branch management
Updated Rubocop workflow to simplify branch handling and remove unnecessary checks.

--- a/.github/workflows/rubocop_syntax_checker.yaml
+++ b/.github/workflows/rubocop_syntax_checker.yaml
@@ -1,19 +1,12 @@
 name: Rubocop
 on:
   push:
-    branches:
-      - master
-    paths:
-      - 'scripts/**'
-      - 'type_data/migrations/**'
-  pull_request:
     paths:
       - 'scripts/**'
       - 'type_data/migrations/**'
 
 permissions:
   contents: write
-  pull-requests: write
 
 jobs:
   rubocop:
@@ -24,19 +17,10 @@ jobs:
 
     name: Run Rubocop on Ruby ${{ matrix.ruby }}
     steps:
-      - name: Determine branch
-        id: branch
-        run: |
-          if [ "${{ github.event_name }}" == "pull_request" ]; then
-            echo "name=${{ github.head_ref }}" >> $GITHUB_OUTPUT
-          else
-            echo "name=${{ github.ref_name }}" >> $GITHUB_OUTPUT
-          fi
-      
       - name: Checkout code
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
-          ref: ${{ steps.branch.outputs.name }}
+          ref: ${{ github.ref_name }}
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
       
@@ -49,23 +33,17 @@ jobs:
       - name: Determine base reference and fetch
         id: base_ref
         run: |
-          if [ "${{ github.event_name }}" == "pull_request" ]; then
-            echo "base=${{ github.base_ref }}" >> $GITHUB_OUTPUT
-            echo "compare_ref=origin/${{ github.base_ref }}" >> $GITHUB_OUTPUT
-            git fetch origin ${{ github.base_ref }}
+          # For push events, check if it's a new branch
+          if [ "${{ github.event.before }}" == "0000000000000000000000000000000000000000" ]; then
+            echo "New branch detected, comparing with default branch"
+            # Use git symbolic-ref which properly handles branch names with spaces
+            DEFAULT_BRANCH=$(git symbolic-ref refs/remotes/origin/HEAD | sed 's@^refs/remotes/origin/@@')
+            echo "base=$DEFAULT_BRANCH" >> $GITHUB_OUTPUT
+            echo "compare_ref=origin/$DEFAULT_BRANCH" >> $GITHUB_OUTPUT
+            git fetch origin "$DEFAULT_BRANCH"
           else
-            # For push events, check if it's a new branch
-            if [ "${{ github.event.before }}" == "0000000000000000000000000000000000000000" ]; then
-              echo "New branch detected, comparing with default branch"
-              # Use git symbolic-ref which properly handles branch names with spaces
-              DEFAULT_BRANCH=$(git symbolic-ref refs/remotes/origin/HEAD | sed 's@^refs/remotes/origin/@@')
-              echo "base=$DEFAULT_BRANCH" >> $GITHUB_OUTPUT
-              echo "compare_ref=origin/$DEFAULT_BRANCH" >> $GITHUB_OUTPUT
-              git fetch origin "$DEFAULT_BRANCH"
-            else
-              echo "base=${{ github.event.before }}" >> $GITHUB_OUTPUT
-              echo "compare_ref=${{ github.event.before }}" >> $GITHUB_OUTPUT
-            fi
+            echo "base=${{ github.event.before }}" >> $GITHUB_OUTPUT
+            echo "compare_ref=${{ github.event.before }}" >> $GITHUB_OUTPUT
           fi
       
       - name: Get changed files
@@ -98,6 +76,18 @@ jobs:
         run: |
           set -o pipefail
           
+          # Skip auto-commit on default/protected branches
+          if [ "${{ github.ref_name }}" == "master" ] || [ "${{ github.ref_name }}" == "main" ]; then
+            echo "::notice::Skipping auto-commit on protected branch ${{ github.ref_name }}"
+            if ! git diff --quiet; then
+              echo "::error::Rubocop autocorrect would make changes to protected branch. Please run 'rubocop -a' locally."
+              git diff --stat
+              exit 1
+            fi
+            echo "No changes needed on protected branch"
+            exit 0
+          fi
+          
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           
@@ -105,11 +95,8 @@ jobs:
             echo "No changes made by rubocop autocorrect"
           else
             if git add -u && git commit -m "Auto-fix: Apply rubocop autocorrections [skip ci]"; then
-              # Use the branch name determined at the start of the workflow
-              CURRENT_BRANCH="${{ steps.branch.outputs.name }}"
-              
               # Attempt to push and capture the exit code
-              if git push origin "HEAD:$CURRENT_BRANCH" 2>&1 | tee /tmp/push_output.txt; then
+              if git push origin "HEAD:${{ github.ref_name }}" 2>&1 | tee /tmp/push_output.txt; then
                 echo "Successfully pushed autocorrect changes"
               else
                 PUSH_EXIT_CODE=$?
@@ -145,4 +132,4 @@ jobs:
       - name: Summary
         if: always() && steps.changed_files.outputs.has_changes == 'false'
         run: |
-          echo "✅ No Ruby, .rbw, or .lic files were changed in this ${{ github.event_name }}"
+          echo "✅ No Ruby, .rbw, or .lic files were changed in this push"
