--- a/.github/workflows/rspec_tests.yml
+++ b/.github/workflows/rspec_tests.yml
@@ -29,5 +29,11 @@ jobs:
           version: 1.0
       - name: Run type data migrations to create gameobj-data.xml
         run: bin/migrate
+      - name: Upload gameobj-data.xml artifact
+        uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4
+        with:
+          name: gameobj-data-ruby-${{ matrix.ruby }}
+          path: gameobj-data.xml
+          retention-days: 30
       - name: Run RSpec tests
         run: bundle exec rspec
