--- a/.github/workflows/rspec_tests.yml
+++ b/.github/workflows/rspec_tests.yml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4
         with:
           name: gameobj-data-ruby-${{ matrix.ruby }}
-          path: gameobj-data.xml
+          path: dist/gameobj-data.xml
           retention-days: 30
       - name: Run RSpec tests
         run: bundle exec rspec
