--- a/.github/workflows/rspec_tests.yml
+++ b/.github/workflows/rspec_tests.yml
@@ -34,6 +34,7 @@ jobs:
         with:
           name: gameobj-data-ruby-${{ matrix.ruby }}
           path: dist/gameobj-data.xml
-          retention-days: 30
+          retention-days: 1
+          overwrite: true
       - name: Run RSpec tests
         run: bundle exec rspec
