--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -27,6 +27,9 @@ Layout/HeredocIndentation:
 Layout/LineLength:
   Enabled: false
 
+Lint/FloatComparison:
+  Enabled: false
+
 Metrics/AbcSize:
   Enabled: false
 
